2006-07-23    <tino@firebird.03.softkill.net>

	* filetool.h (tino_file_pathchar): added

2006-07-22    <tino@firebird.03.softkill.net>

	* filetool.h (tino_file_skip_root, tino_file_skip_root_const):
	added

	* file.h (tino_file_mkdir): added

	* ex.h (tino_verr): added
	(tino_err): changed to tino_verr
	(tino_verror): flushing added, such that errors are in sequence.
	(tino_verror_std): added
	(tino_verror): now uses tino_verror_std

	* getopt.h (tino_getopt_tab): '\n' as second natural delimiter
	(tino_getopt): Multiline usage will be printer between Version and
	Options.

	* filetool.h (tino_file_gluebuffer): added
	(tino_file_glue_path, tino_file_dirname, tino_file_filename): now
	uses tino_file_gluebuffer
	(tino_file_dirname, tino_file_filename): bugs removed by
	tino_file_gluebuffer
	(tino_file_backupname): added

	* sockbuf.h (tino_sockbuf_get, tino_sockbuf_fd): added

	* file.h (tino_file_blocking, tino_file_nonblock) 
	(tino_file_block): added

2006-07-21    <tino@firebird.03.softkill.net>

	* setuptino.sh: Thou shalt test thee! sigh .. the checkout process
	now works as expected.

2006-07-19    <tino@firebird.03.softkill.net>

	* buf.h (tino_buf_get_s_nonconst, tino_buf_get_nonconst): added

2006-07-17    <tino@firebird.03.softkill.net>

	* setuptino.sh: add tino/ directory to CVS

	* getopt.h (tino_getopt_var_to_str): added ' to character output

	* setuptino.sh: Checkout instead of copy, it gets tedious to
	cleanup after the copy always .. ;)

2006-06-17    <tino@firebird.03.softkill.net>

	* sock.h (tino_sock_get_adrname): IPv6 IPs are written in brackets
	like [aaaa:bbb::cc:d]:PORT for better compatibility

	* proc.h (tino_wait_child): Only use alarm(0) if timeout is set

	* sock.h (tino_sock_get_adrname, tino_sock_get_sockname): added

	* Makefile.proto (static): "make static" failed switching into
	static mode the first time

2006-06-16    <tino@firebird.03.softkill.net>

	* Makefile.proto (install): typo corrected
